--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1> 
-        Mi Portfolio   
+        My Portfolio   
     </h1>
+    <p>  Modification in remote repository test</p>
 </body>
 </html>
